# AC_LIB

./: CMakeLists.txt  CONTRIBUTING.adoc  LICENSE.adoc  README.adoc  README.md  configure.sh  ideas.md  meson.build  native.build  run.sh
ac_get_number_from_buffer/: CMakeLists.txt  ac_library_documentation.adoc
ac_get_number_from_buffer/output/windows/: ac_get_number_from_buffer.h  ac_get_number_from_buffer.lib
ac_get_number_from_buffer/scripts/: run_windows.sh
ac_get_number_from_buffer/src/tests/: test_1.c
src/: ac_input.c  ac_input.h  ac_lib.h  ac_string.c  ac_string.h  ac_vector.c  ac_vector.h  c_vecto  c_vector  main.c
test/: CMakeLists.txt
